--- a/myApp/components/BannerImageComp.module.css
+++ b/myApp/components/BannerImageComp.module.css
@@ -5,10 +5,8 @@
   background-size: cover;
   background-position: center;
   color: white;
-}
 
-.cardMedia {
-  display: none;
+  box-sizing: border-box;
 }
 
 .cardContent {
@@ -17,15 +15,18 @@
   left: 0;
   color: rgb(0, 0, 0);
   padding: 16px;
-  width: 50%;
+  width: 50%; 
   background: rgba(255, 255, 255, 0.8);
   box-sizing: border-box;
+ 
 }
 
 .title {
   color: black; 
   background: rgba(255, 255, 255, 0.8);
-  width: 40%;
+  width: 50%;
+
+  font-size: 1.5rem;
 }
 
 .editIcon {
@@ -33,4 +34,47 @@
   top: 10px;
   right: 10px;
   color: white;
+}
+
+
+@media (max-width: 1200px) {
+  .bannerCard {
+    height: 300px; 
+  }
+
+  .cardContent {
+    padding: 12px;
+  }
+
+  .title {
+    font-size: 1.25rem;
+  }
+}
+
+@media (max-width: 992px) {
+  .bannerCard {
+    height: 250px; 
+  }
+
+  .cardContent {
+    padding: 10px;
+  }
+
+  .title {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .bannerCard {
+    height: 200px; 
+  }
+
+  .cardContent {
+    padding: 8px;
+  }
+
+  .title {
+    font-size: 0.875rem;
+  }
 }
